# sg_cpp_demo

./: CMakeLists.txt  README.md
include/: Rect.h  Shape.h  SogouVadDetector.h  Student.h  VadDetector.h  WebRtcVadDetector.h
src/: AppDataProcessor.cpp  AppDataProcessor.h  DataProcessor.h  Shape.cpp  SogouVadDetector.cpp  SysDataProcessor.cpp  SysDataProcessor.h  WebRtcVadDetector.cpp  main.cpp
